remove web-socket, RRE, cmap, playback, etc
- Remove web-socket-js, remove include/vnc.js.
- Just do includes directly in vnc.html.
- Remove RRE.
- Assume true color, remove colour map code.
- Also remove include/playback.js
- Remove some canvas indirections.

--- a/vnc.html
+++ b/vnc.html
@@ -14,7 +14,10 @@
         <script type='text/javascript' 
             src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
         -->
-        <script src="include/vnc.js"></script>
+        <script src="include/util.js"></script>
+        <script src="include/des.js"></script>
+        <script src="include/canvas.js"></script>
+        <script src="include/rfb.js"></script>
     </head>
 
     <body style="margin: 0px;">
