--- a/vnc.html
+++ b/vnc.html
@@ -84,7 +84,7 @@ Connect parameters are provided in query string:
             default:             klass = "sWarn";
         }
 
-        if (typeof(msg) !== 'undefined') {
+        if (msg) {
             $('top_bar').setAttribute("class", klass);
             s.innerHTML = msg;
         }
